# cachelib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: pre-commit.yaml  publish.yaml  tests.yaml  zizmor.yaml
cachelib/: __init__.py  _compat.py  base.py  file.py  memcached.py  redis.py  s3.py  simple.py  uwsgi.py
docs/: base.rst  conf.py  dynamodb.rst  file.rst  index.rst  installation.rst  memcached.rst  mongodb.rst  quickstart.rst  redis.rst  redis_base.rst  serializers.rst  simple.rst  uwsgi.rst  valkey.rst
requirements/: dev.in  dev.txt  docs.txt  tests.in  tests.txt  typing.txt
src/cachelib/: __init__.py  _compat.py  base.py  dynamodb.py  file.py  memcached.py  mongodb.py  redis.py  redis_base.py  serializers.py  shm.py  simple.py  uwsgi.py  valkey.py
test/: test_s3.py
tests/: clear.py  common.py  conftest.py  delete_many_with_prefix.py  has.py  serializer.py  test_base_cache.py  test_dynamodb_cache.py  test_file_system_cache.py  test_interface_uniformity.py  test_memcached_cache.py  test_mongodb_cache.py  test_optional_dependencies.py  test_redis_cache.py  test_serializers.py  test_simple_cache.py  test_uwsgi_cache.py  test_valkey_cache.py
