[metadata]
name = cachelib
version = attr: chachelib.__version__
url = https://github.com/pallets/cachelib
project_urls =
    Code = https://github.com/pallets/cachelib
    Issue tracker = https://github.com/pallets/cachelib/issues
license = BSD
license_files = LICENSE
author = attr: chachelib.__author__
author_email = contact@palletsprojects.com
description = A collection of cache libraries in the same API interface.
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any
classifiers=
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
zip_safe = false

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
