[metadata]
name = cachelib
version = attr: cachelib.__version__
url = https://github.com/pallets-eco/cachelib/
project_urls =
    Donate = https://palletsprojects.com/donate
    Documentation = https://cachelib.readthedocs.io/
    Changes = https://cachelib.readthedocs.io/changes/
    Source Code = https://github.com/pallets-eco/cachelib/
    Issue Tracker = https://github.com/pallets-eco/cachelib/issues/
    Twitter = https://twitter.com/PalletsTeam
    Chat = https://discord.gg/pallets
license = BSD-3-Clause
license_files = LICENSE.rst
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = A collection of cache libraries in the same API interface.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    default::DeprecationWarning:cachelib.uwsgi
    default::DeprecationWarning:cachelib.redis

[coverage:run]
branch = True
source =
    cachelib
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
    # zip without an explicit strict
    B905
# up to 88 allowed by bugbear B950
max-line-length = 80

[mypy]
files = src/cachelib
python_version = 3.7
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
